--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postcss": "8.3.11",
     "postcss-csso": "^6.0.0",
     "stylelint": "13.13.1",
-    "stylelint-config-htmlacademy": "0.1.11"
+    "stylelint-config-htmlacademy": "0.1.11",
+    "terser": "^5.10.0"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
