--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "postcss-csso": "^6.0.0",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.11",
-    "svgstore": "^3.0.1",
-    "terser": "^5.10.0"
+    "svgstore": "^3.0.1"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
