--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "4.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-less": "5.0.0",
+    "gulp-libsquoosh": "^1.0.12",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.1",
     "gulp-rename": "^2.0.0",
@@ -17,6 +18,7 @@
     "gulp-svgo": "^2.2.1",
     "gulp-svgstore": "^9.0.0",
     "gulp-terser": "^2.1.0",
+    "gulp-webp": "^4.0.1",
     "pixel-glass": "^1.0.13",
     "postcss": "8.3.11",
     "postcss-csso": "^6.0.0",
